Manifests/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/postgres: "true"
        io.kompose.service: pgadmin
    spec:
      containers:
      - env:
        - name: PGADMIN_CONFIG_SERVER_MODE
          value: "False"
        - name: PGADMIN_DEFAULT_EMAIL
          value: pgadmin4@pgadmin.org
        - name: PGADMIN_DEFAULT_PASSWORD
          value: admin
        image: dpage/pgadmin4
        imagePullPolicy: ""
        name: pgadmin-container
        volumeMounts:
        - mountPath: /var/opt/kubereval/pga/data/
          name: pga-claim0
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: pga-claim0
          hostPath:
            path: /run/desktop/mnt/host/c/kubereval/pga_data
            type: DirectoryOrCreate
status: {}
