Manifests/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/postgres: "true"
        io.kompose.service: postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: YOUR_POSTGRES_DATABASE
        - name: POSTGRES_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: secret
              key: DB_PASSWORD
        - name: POSTGRES_USER
          valueFrom: 
            secretKeyRef:
              name: secret
              key: DB_USERNAME
        image: postgres
        imagePullPolicy: Always
        name: postgres-container
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/opt/kubereval/pgdb/data/
          name: pgdb-claim0
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: pgdb-claim0
          hostPath:
            path: /run/desktop/mnt/host/c/kubereval/pgdb_data
            type: DirectoryOrCreate
status: {}
